--- a/docs/.vitepress/theme/tailwind.postcss
+++ b/docs/.vitepress/theme/tailwind.postcss
@@ -136,16 +136,6 @@ html.dark {
 }
 /* === Scrollbars === */
 
-h2 {
-  font-size: 16px !important;
-  font-weight: 600 !important;
-  margin: 12px 0 !important;
-}
-h3 {
-  font-size: 14px !important;
-  margin: 8px 0 !important;
-}
-
 .shiki {
   padding: 10px 62px 10px 12px !important;
   border-radius: 6px !important;
@@ -154,6 +144,10 @@ h3 {
   font-size: 12px !important;
   overflow: auto !important;
   line-height: 14px !important;
+  width: 100% !important;
+  height: 100% !important;
+  background-color: #351e11 !important;
+  color: #d6ceff !important;
 }
 
 html.dark .shiki,
